<resources>
    <string name="app_name">GameCentre</string>
    <string-array name="size_array">
        <item>3x3</item>
        <item>4x4</item>
        <item>5x5</item>
    </string-array>
    <string-array name="number_or_picture_array">
        <item>Play with Number Tiles</item>
        <item>Play with Picture Tiles</item>
    </string-array>
    <string name="title_activity_score">ScoreActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="test_string">Hello, Charlie</string>
    <string name="win_string">You won!</string>


    <string name="high_score">HIGH SCORE</string>
    <string name="score">SCORE</string>
    <string name="instructions">Swipe to move. 2 + 2 = 4. Reach 2048.</string>
    <string name="you_win">You Win!</string>
    <string name="game_over">Game Over!</string>
    <string name="go_on">Tap to Continue</string>
    <string name="for_now">For now…</string>
    <string name="endless">"Endless" Mode</string>

    <string name="stand_text">Stand</string>
    <string name="hit_text">Hit</string>
    <string name="double_text">Double</string>
    <string name="player_score_message">Your current bet is :</string>
    <string name="player_balance_message">Your current balance is :</string>
    <string name="player_balance_">1000</string>
    <string name="zero">0</string>

    <!-- Confirmation dialog-->
    <string name="reset">Reset</string>
    <string name="continue_game">Cancel</string>
    <string name="reset_dialog_title">Reset game?</string>
    <string name="reset_dialog_message">Are you sure you wish to reset the game?</string>

    <string name="header">2048</string>
</resources>
