<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/myCoordinatorLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main_blackjack"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/back"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        tools:context=".MainActivityBlackJack">

        <Button
            android:id="@+id/standButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="85dp"
            android:onClick="standOnClick"
            android:text="@string/stand_text" />

        <Button
            android:id="@+id/hitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="45dp"
            android:onClick="hitOnClick"
            android:text="@string/hit_text" />

        <Button
            android:id="@+id/doubleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="5dp"
            android:onClick="doubleOnClick"
            android:text="@string/double_text"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/myCard1"
            android:layout_width="wrap_content"
            android:layout_height="125dp"
            android:layout_above="@+id/standButton"
            android:layout_alignParentStart="true"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="-124dp"
            android:tag="0"
            android:visibility="invisible"
            app:srcCompat="@drawable/card_0"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/myCard2"
            android:layout_width="wrap_content"
            android:layout_height="125dp"
            android:layout_above="@+id/standButton"
            android:layout_alignParentStart="true"
            android:layout_marginStart="28dp"
            android:layout_marginBottom="-124dp"
            android:tag="0"
            android:visibility="invisible"
            app:srcCompat="@drawable/card_0"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/myCard3"
            android:layout_width="wrap_content"
            android:layout_height="125dp"
            android:layout_above="@+id/standButton"
            android:layout_alignParentStart="true"
            android:layout_marginStart="48dp"
            android:layout_marginBottom="-124dp"
            android:tag="0"
            android:visibility="invisible"
            app:srcCompat="@drawable/card_0"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/myCard4"
            android:layout_width="wrap_content"
            android:layout_height="125dp"
            android:layout_above="@+id/standButton"
            android:layout_alignParentStart="true"
            android:layout_marginStart="68dp"
            android:layout_marginBottom="-124dp"
            android:tag="0"
            android:visibility="invisible"
            app:srcCompat="@drawable/card_0"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/myCard5"
            android:layout_width="wrap_content"
            android:layout_height="125dp"
            android:layout_above="@+id/standButton"
            android:layout_alignParentStart="true"
            android:layout_marginStart="88dp"
            android:layout_marginBottom="-124dp"
            android:tag="0"
            android:visibility="invisible"
            app:srcCompat="@drawable/card_0"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/myCard6"
            android:layout_width="wrap_content"
            android:layout_height="125dp"
            android:layout_above="@+id/standButton"
            android:layout_alignParentStart="true"
            android:layout_marginStart="108dp"
            android:layout_marginBottom="-124dp"
            android:tag="0"
            android:visibility="invisible"
            app:srcCompat="@drawable/card_0"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/myCard7"
            android:layout_width="wrap_content"
            android:layout_height="125dp"
            android:layout_above="@+id/standButton"
            android:layout_alignParentStart="true"
            android:layout_marginStart="128dp"
            android:layout_marginBottom="-124dp"
            android:tag="0"
            android:visibility="invisible"
            app:srcCompat="@drawable/card_0"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/dealerCard1"
            android:layout_width="wrap_content"
            android:layout_height="125dp"
            android:layout_above="@+id/standButton"
            android:layout_alignParentStart="true"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="120dp"
            android:tag="0"
            android:visibility="invisible"
            app:srcCompat="@drawable/card_0"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/dealerCard2"
            android:layout_width="wrap_content"
            android:layout_height="125dp"
            android:layout_above="@+id/standButton"
            android:layout_alignParentStart="true"
            android:layout_marginStart="28dp"
            android:layout_marginBottom="120dp"
            android:tag="0"
            android:visibility="invisible"
            app:srcCompat="@drawable/card_0"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/dealerCard3"
            android:layout_width="wrap_content"
            android:layout_height="125dp"
            android:layout_above="@+id/standButton"
            android:layout_alignParentStart="true"
            android:layout_marginStart="48dp"
            android:layout_marginBottom="120dp"
            android:tag="0"
            android:visibility="invisible"
            app:srcCompat="@drawable/card_0"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/dealerCard4"
            android:layout_width="wrap_content"
            android:layout_height="125dp"
            android:layout_above="@+id/standButton"
            android:layout_alignParentStart="true"
            android:layout_marginStart="68dp"

            android:layout_marginBottom="120dp"
            android:tag="0"
            android:visibility="invisible"
            app:srcCompat="@drawable/card_0"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/dealerCard5"
            android:layout_width="wrap_content"
            android:layout_height="125dp"
            android:layout_above="@+id/standButton"
            android:layout_alignParentStart="true"

            android:layout_marginStart="88dp"

            android:layout_marginBottom="120dp"
            android:tag="0"
            android:visibility="invisible"
            app:srcCompat="@drawable/card_0"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/dealerCard6"
            android:layout_width="wrap_content"
            android:layout_height="125dp"
            android:layout_above="@+id/standButton"
            android:layout_alignParentStart="true"

            android:layout_marginStart="108dp"

            android:layout_marginBottom="120dp"
            android:tag="0"
            android:visibility="invisible"
            app:srcCompat="@drawable/card_0"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/dealerCard7"
            android:layout_width="wrap_content"
            android:layout_height="125dp"
            android:layout_above="@+id/standButton"
            android:layout_alignParentStart="true"
            android:layout_marginStart="128dp"
            android:layout_marginBottom="120dp"
            android:tag="0"
            android:visibility="invisible"
            app:srcCompat="@drawable/card_0"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/handValueStatement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/myCard1"
            android:layout_marginStart="-7dp"
            android:layout_marginBottom="100dp"
            android:text="@string/player_score_message"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/handValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/handValueStatement"
            android:layout_toEndOf="@+id/myCard4"
            android:text="@string/zero"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/storageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="14dp"
            android:layout_marginBottom="157dp"
            android:text="@string/zero"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/availBalanceMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="297dp"
            android:layout_marginEnd="21dp"
            android:text="@string/player_balance_message" />

        <TextView
            android:id="@+id/availableBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/storageText"
            android:layout_alignParentTop="true"
            android:layout_marginTop="321dp"
            android:layout_marginEnd="-2dp"
            android:text="@string/player_balance_" />


    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>